# google-news-trend-mcp

./: .env.example  .gitignore  ACCEPTANCE_CRITERIA_ANALYSIS.md  API_DOCUMENTATION.md  COMPLETION_REPORT.md  CONSOLIDATED_BACKEND_GUIDE.md  CONSOLIDATION_COMPLETE.md  CURRENT_STATUS.md  DEBUG_TOOLS.md  DOCKER_BUILD_SUMMARY.md  DOCUMENTATION_INDEX.md  FINAL_COMPLETION_SUMMARY.md  FIX_TAVILY_403_ERROR.md  FRONTEND_IMPLEMENTATION_COMPLETE.md  GROQ_SETUP_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTING_GUIDE.md  MCP_AUTHORIZATION_FIX.md  MCP_INTEGRATION_GUIDE.md  NEXT_STEPS.md  NEXT_STEPS_MCP_FIX.md  QUICK_FIX_REFERENCE.md  QUICK_START.md  QUICK_START_REACT_LOOP.md  REACT_LOOP_IMPLEMENTATION.md  README.md  RUN_COMMANDS.md  SETUP_INSTRUCTIONS.md  SYSTEM_COMPLETE.md  SYSTEM_INTEGRATION_GUIDE.md  TEST_MCP_FIX.md  TOOL_DEBUG_CHECKLIST.md  WHY_403_ERROR.md  docker-compose.yml
.kiro/specs/langchain-react-chatbot/: design.md  requirements.md  tasks.md
backend/: .env.example  Dockerfile  pytest.ini  requirements.txt  test_agent.py  test_chat_debug.py  test_env.py  test_integration_auth.py  test_integration_chat.py  test_integration_isolation.py  test_integration_tools.py  test_main.py  test_no_auth.py  test_react_loop.py  test_simple.py  test_tools_direct.py
backend/app/: main.py
backend/migrations/: 001_create_tables.sql  SETUP.md
frontend/: .env.example  Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
google-news-trends-mcp/: .env.example  Dockerfile  README.md  auth.py  chatbot_routers.py  load_var.py  main.py  mcp_server.py  pyproject.toml  react_agent.py  supabase_client.py  tools.py
google-news-trends-mcp/security/: __init__.py  utils.py  verification.py
(+26 files in other folders)
